--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <div>
                                     <span class="projects__subtitle">Projeto: Muros</span>
                                     <h3 class="projects__title">Em tempo de pandemia</h3>
-                                    <a href="C:/Users/pedro/Desktop/Drops/Miniportifolio/react.html" class="projects__button button button__small" target="_blank">
+                                    <a href="" class="projects__button button button__small" target="_blank">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -120,7 +120,7 @@
                                 <div>
                                     <span class="projects__subtitle">Projeto: Muros</span>
                                     <h3 class="projects__title">Parede com apenas uma cor</h3>
-                                    <a href="C:/Users/pedro/Desktop/Drops/Miniportifolio/IA.html" class="projects__button button button__small" target="_blank">
+                                    <a href="" class="projects__button button button__small" target="_blank">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -134,7 +134,7 @@
                                 <div>
                                     <span class="projects__subtitle">Projeto: Muros</span>
                                     <h3 class="projects__title">Do pc para parede</h3>
-                                    <a href="C:/Users/pedro/Desktop/Drops/Miniportifolio/Figma.html" class="projects__button button button__small" target="_blank">
+                                    <a href="" class="projects__button button button__small" target="_blank">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -148,7 +148,7 @@
                                 <div>
                                     <span class="projects__subtitle">Projeto: Muros</span>
                                     <h3 class="projects__title">Da parede pro PC</h3>
-                                    <a href="C:/Users/pedro/Desktop/Drops/Miniportifolio/jogos.html" class="projects__button button button__small" target="_blank">
+                                    <a href="" class="projects__button button button__small" target="_blank">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -162,7 +162,7 @@
                                 <div>
                                     <span class="projects__subtitle">Projeto: Muros</span>
                                     <h3 class="projects__title">Landing Page</h3>
-                                    <a href="https://landingiichai.vercel.app/" class="projects__button button button__small" target="_blank">
+                                    <a href="" class="projects__button button button__small" target="_blank">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -176,7 +176,7 @@
                                 <div>
                                     <span class="projects__subtitle">Figma</span>
                                     <h3 class="projects__title">UI/UX: Game Page</h3>
-                                    <a href="https://www.figma.com/proto/qAA4TFkw0D103hWhbQNJvr/GameOnline?node-id=1%3A3&scaling=scale-down&page-id=0%3A1" class="projects__button button button__small" target="_blank">
+                                    <a href="" class="projects__button button button__small" target="_blank">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -201,7 +201,7 @@
         
                                         <div>
                                             <h3 class="skills__name">O Projeto</h3>
-                                            <span class="skills__level">O projeto Muros é uma iniciativa sem fins lucrativos que une arte e caridade para transformar vidas. Com o objetivo de ajudar crianças em situação de pobreza, o projeto convida grafiteiros de todo o mundo para criar obras de arte em muros e prédios em comunidades carentes. Além de trazer cor e vida para esses ambientes, o projeto também promove a educação e o desenvolvimento pessoal das crianças através de oficinas e programas de arte.</span>
+                                            <span class="skills__level">O projeto Muros é uma iniciativa sem fins lucrativos que une arte e caridade para transformar vidas. Com o objetivo de ajudar crianças em situação de pobreza, o projeto convida grafiteiros de todo o mundo (No Brasil em São Paulo) para criar obras de arte em muros e prédios em comunidades carentes. Além de trazer cor e vida para esses ambientes, o projeto também promove a educação e o desenvolvimento pessoal das crianças através de oficinas e programas de arte.</span>
                                         </div>
                                     </div>
                                 </div>
